Dark Mode: Fix Textarea & Input's Selection Color

--- a/cdnjs/semantic-ui/2.4.1/semantic-dark.css
+++ b/cdnjs/semantic-ui/2.4.1/semantic-dark.css
@@ -700,19 +700,19 @@
  textarea::-webkit-selection,
  input::-webkit-selection {
    background-color: #CCE2FF;
-   color: #FFF;
+   color: #000;
  }
  
  textarea::-moz-selection,
  input::-moz-selection {
    background-color: #CCE2FF;
-   color: #FFF;
+   color: #000;
  }
  
  textarea::selection,
  input::selection {
    background-color: #CCE2FF;
-   color: #FFF;
+   color: #000;
  }
  
  /* Force Simple Scrollbars */
